--- a/Suma2Lealtad/Web.config
+++ b/Suma2Lealtad/Web.config
@@ -44,6 +44,8 @@
       </system.Web>
   -->
   <system.web>
+    <customErrors mode="On">
+    </customErrors>
     <sessionState timeout="25"></sessionState>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
@@ -64,10 +66,6 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-
-    <!--para ver los errores en los clientes-->
-      <customErrors mode="Off"/>
-
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
