--- a/Suma2Lealtad/Web.config
+++ b/Suma2Lealtad/Web.config
@@ -25,15 +25,13 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <!--<add key="WSCARDS" value="http://172.20.1.18/CardsREST/ServiceCards.svc/" />
-    <add key="WSWEB" value="http://172.20.1.18/PlazasREST/ServiceREST.svc/" />-->
     <!--<add key="WSCARDS" value="http://172.20.1.24/CardsREST/QA/ServiceCards.svc/" />
     <add key="WSWEB"   value="http://172.20.1.24/PlazasREST/QA/ServiceREST.svc/" />-->
     <add key="WSCARDS" value="http://172.20.1.24/CardsREST/DESA/ServiceCards.svc/" />
-    <add key="WSWEB"   value="http://172.20.1.24/PlazasREST/DESA/ServiceREST.svc/" />
+    <add key="WSWEB" value="http://172.20.1.24/PlazasREST/DESA/ServiceREST.svc/" />
     <add key="PASSKEY" value="plazas" />
     <!--<add key="PATHPICTURE" value="~/Pictures/" />-->
-    <add key="PATHPICTURE" value="~/Picture/@filename@.jpg" />
+    <!--<add key="PATHPICTURE" value="~/Picture/@filename@.jpg" />-->
   </appSettings>
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -44,9 +42,8 @@
       </system.Web>
   -->
   <system.web>
-    <customErrors mode="On">
-    </customErrors>
-    <sessionState timeout="25"></sessionState>
+    <customErrors mode="On"></customErrors>
+    <sessionState timeout="20"></sessionState>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
