--- a/Suma2Lealtad/Web.config
+++ b/Suma2Lealtad/Web.config
@@ -25,10 +25,15 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <!--<add key="WSCARDS" value="http://172.20.1.24/CardsREST/QA/ServiceCards.svc/" />
-    <add key="WSWEB"   value="http://172.20.1.24/PlazasREST/QA/ServiceREST.svc/" />-->
-    <add key="WSCARDS" value="http://172.20.1.24/CardsREST/DESA/ServiceCards.svc/" />
-    <add key="WSWEB" value="http://172.20.1.24/PlazasREST/DESA/ServiceREST.svc/" />
+    <!--AMBIENTE QA-->
+    <!--<add key="WSCARDS" value="http://172.20.1.23/CardsREST/QA/ServiceCards.svc/" />
+    <add key="WSWEB" value="http://172.20.1.23/PlazasREST/QA/ServiceREST.svc/" />-->
+    <!--AMIBENTE DESA-->
+    <!--<add key="WSCARDS" value="http://172.20.1.23/CardsREST/DESA/ServiceCards.svc/" />
+    <add key="WSWEB" value="http://172.20.1.23/PlazasREST/DESA/ServiceREST.svc/" />-->
+    <!--AMBIENTE PRODUCCION-->
+    <add key="WSCARDS" value="http://172.20.1.23/CardsREST/ServiceCards.svc/" />
+    <add key="WSWEB" value="http://172.20.1.23/PlazasREST/ServiceREST.svc/" />
     <add key="PASSKEY" value="plazas" />
     <!--<add key="PATHPICTURE" value="~/Pictures/" />-->
     <!--<add key="PATHPICTURE" value="~/Picture/@filename@.jpg" />-->
@@ -159,7 +164,7 @@
     <iriParsing enabled="true" />
   </uri>
   <connectionStrings>
-    <!--<add name="LealtadEntities" connectionString="metadata=res://*/Models.SumaLealtad.csdl|res://*/Models.SumaLealtad.ssdl|res://*/Models.SumaLealtad.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=172.20.1.18;initial catalog=SumaLealtad_QA;persist security info=True;user id=sa;password=pl@z@s.14;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="LealtadEntities" connectionString="metadata=res://*/Models.SumaLealtad.csdl|res://*/Models.SumaLealtad.ssdl|res://*/Models.SumaLealtad.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=172.20.1.18;initial catalog=SumaLealtad;persist security info=True;user id=sa;password=pl@z@s.14;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--AMBIENTE PRODUCCION-->
+    <add name="LealtadEntities" connectionString="metadata=res://*/Models.SumaLealtad.csdl|res://*/Models.SumaLealtad.ssdl|res://*/Models.SumaLealtad.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=172.20.1.23;initial catalog=SumaLealtad;persist security info=True;user id=sa;password=Suma2os;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
