V.1.0.1 Ajustes OrdenRecargaPrepagoRepository: 1-Inclusión de instrucción SaveChanges de modelo EntityFramework entre cada llamada al servicio addbatch 2-Inclusión de 2 seg adicionales de espera entre cada llamada al servicio addbatch 3-Se corrige el guardado de la fecha de procesamiento de la orden 4-Apliación del campo para cardsresponse 5-Inclusión de mensajeria de error en llamada al servicio addbatch en campo cardsresponse 6-Inclusión del batchid en el campo cardsresponse para llamadas al servicio addbatch exitosas
Ajustes a AfiliadoSumaRepository:
1-Se corrige el guardado del track2, cvv2 y la fecha_creacion al Aprobar

Ajustes a vistas ClientePrepago->DetalleOrden,  OrdenRecargaPrepago->DetalleOrden y OrdenRecargaPrepago->CreateOrden para falla en el manejo del indicadorGuardar y validación de submit.

--- a/Suma2Lealtad/Web.config
+++ b/Suma2Lealtad/Web.config
@@ -26,14 +26,14 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--AMBIENTE QA-->
-    <!--<add key="WSCARDS" value="http://172.20.1.23/CardsREST/QA/ServiceCards.svc/" />
-    <add key="WSWEB" value="http://172.20.1.23/PlazasREST/QA/ServiceREST.svc/" />-->
-    <!--AMIBENTE DESA-->
-    <!--<add key="WSCARDS" value="http://172.20.1.23/CardsREST/DESA/ServiceCards.svc/" />
-    <add key="WSWEB" value="http://172.20.1.23/PlazasREST/DESA/ServiceREST.svc/" />-->
+    <!--<add key="WSCARDS" value="http://172.20.1.23/CardsREST/ServiceCards.svc/" />
+    <add key="WSWEB" value="http://172.20.1.23/PlazasREST/ServiceREST.svc/" />-->
+    <!--AMIBENTE DESARROLLO-->
+    <add key="WSCARDS" value="http://172.20.1.18/CardsREST/ServiceCards.svc/" />
+    <add key="WSWEB" value="http://172.20.1.18/PlazasREST/ServiceREST.svc/" />
     <!--AMBIENTE PRODUCCION-->
-    <add key="WSCARDS" value="http://172.20.1.23/CardsREST/ServiceCards.svc/" />
-    <add key="WSWEB" value="http://172.20.1.23/PlazasREST/ServiceREST.svc/" />
+    <!--<add key="WSCARDS" value="http://172.20.1.23/CardsREST/ServiceCards.svc/" />
+    <add key="WSWEB" value="http://172.20.1.23/PlazasREST/ServiceREST.svc/" />-->
     <add key="PASSKEY" value="plazas" />
     <!--<add key="PATHPICTURE" value="~/Pictures/" />-->
     <!--<add key="PATHPICTURE" value="~/Picture/@filename@.jpg" />-->
@@ -164,7 +164,9 @@
     <iriParsing enabled="true" />
   </uri>
   <connectionStrings>
+    <!--AMBIENTE DESARROLLO-->
+    <add name="LealtadEntities" connectionString="metadata=res://*/Models.SumaLealtad.csdl|res://*/Models.SumaLealtad.ssdl|res://*/Models.SumaLealtad.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=172.20.1.18;initial catalog=SumaLealtad;persist security info=True;user id=sa;password=pl@z@s.14;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />  
     <!--AMBIENTE PRODUCCION-->
-    <add name="LealtadEntities" connectionString="metadata=res://*/Models.SumaLealtad.csdl|res://*/Models.SumaLealtad.ssdl|res://*/Models.SumaLealtad.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=172.20.1.23;initial catalog=SumaLealtad;persist security info=True;user id=sa;password=Suma2os;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="LealtadEntities" connectionString="metadata=res://*/Models.SumaLealtad.csdl|res://*/Models.SumaLealtad.ssdl|res://*/Models.SumaLealtad.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=172.20.1.23;initial catalog=SumaLealtad;persist security info=True;user id=sa;password=Suma2os;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
 </configuration>
